fix missing comment in shib_table_auth.conf

--- a/shib_table_auth.conf
+++ b/shib_table_auth.conf
@@ -2,7 +2,7 @@
 # This configuration is compatible with UF's shib-table authentication method
 
 # Instance name is "stage_c". Change this string to suit your need. 
-If your REDCap is installed at the root of your host, remove '^/stage_c' from the locations below
+# If your REDCap is installed at the root of your host, remove '^/stage_c' from the locations below
 
 <Location ~ "^/stage_c">
  AuthType shibboleth
