update patching scripts to use tag of targeted version

--- a/scripts/version.config
+++ b/scripts/version.config
@@ -1,4 +1,4 @@
-REDCAP_VERSION=9.3.0
+REDCAP_VERSION=9.3.5
 VANDY_REDCAP_DIR=~/projects/REDCap
-VANDY_REDCAP_BRANCH_A=master
-VANDY_REDCAP_BRANCH_B=shibboleth-table-auth
+VANDY_REDCAP_BRANCH_A=9.3.5
+VANDY_REDCAP_BRANCH_B=
